fixed spacing on top

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -26,7 +26,7 @@ html, body
   position: relative
   float: left
   width: 400px
-  padding-top: 100px
+  padding-top: 120px
   > h1
     font-size: 40px
     text-align: right
@@ -72,7 +72,7 @@ html, body
 
 #content
   float: left
-  padding-top: 100px
+  padding-top: 120px
   padding-left: 75px
   width: 549px
   h1
